--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "301 github api demo",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Bob McBobbypants",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.4",
-    "express": "^4.14.0"
-  }
+    "express": "^4.16.2",
+    "superagent": "^3.8.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jjkusowski/301-14-github-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jjkusowski/301-14-github-api/issues"
+  },
+  "homepage": "https://github.com/jjkusowski/301-14-github-api#readme"
 }
